--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PyMail</title>
+    <title>kanban</title>
     <link rel="icon shortcut" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Circle-icons-mail.svg/512px-Circle-icons-mail.svg.png" />
     <link rel="stylesheet" media="screen, projection" href="styles/styles.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/fa/brands.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/fa/fontawesome.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/fa/regular.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/fa/solid.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/fa/v4-shims.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/leda/assets/css/themes/leda/styles.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/leda/assets/css/helpers.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/leda/assets/css/reset.css">
+    <link rel="stylesheet" media="screen, projection" href="styles/leda/assets/css/scrollbar.css">
   </head>
   <body></body>
 </html>
